# high-fidelity-tilting-quadrotor

./: LICENSE  README.md  high_fidelity_tilting_quadrotor.slx  simple_high_fidelity_tilting_quadrotor_test.slx  simple_high_fidelity_tilting_quadrotor_test_Data.m
MATLAB/: high_fidelity_tilting_quadrotor.slx  simple_high_fidelity_tilting_quadrotor_test_Data.m
MATLAB/examples/: simple_attitude_controller.slx  simple_attitude_controller_FL.slx  simple_high_fidelity_tilting_quadrotor_test.slx
MATLAB/failed_accurateTiltingModels/: accurateTiltingModel2.slx
MATLAB/resources/project/EEtUlUb-dLAdf0KpMVivaUlztwA/: bIh2iyFoqLe9mRwPmz74BcnB9rop.xml
MATLAB/resources/project/L1N_OubCVw8ZuOBV-_aSVh3JCs8/: BEDUjwG12985x18bXpm3RTKVvCIp.xml
MATLAB/resources/project/OfxnnyUcu5GSELEDRUyOXcMZW0c/: 181XSSuQvbR0aEgDP1oAd70r-Q0p.xml  XNX_gvuLHeUIlHxIwIlJRz2i4Msp.xml
failed_accurateTiltingModels/: test_accurateTiltingModel.slx
high_fidelity_tilting_quadrotor/: CMakeLists.txt  package.xml
high_fidelity_tilting_quadrotor/launch/: tilting.launch.py
high_fidelity_tilting_quadrotor/models/x500_tilting/: model.config  model.sdf
high_fidelity_tilting_quadrotor/worlds/: default.sdf
matlab/: simple_high_fidelity_tilting_quadrotor_test.slx
matlab/failed_accurateTiltingModels/: accurateTiltingModel.slx  accurateTiltingModel3.slx  accurateTiltingModel4.slx
matlab/resources/project/L1N_OubCVw8ZuOBV-_aSVh3JCs8/: -quJM6FlmTMiysckJx9owQqKwwUp.xml  9xrUP2WbXOFJCpWfKHiaojZJt3Qp.xml  (+2 more)
resources/project/EEtUlUb-dLAdf0KpMVivaUlztwA/: gCiMva4fHGJLmDBs6MGSicCRVVkp.xml
(+5 files in other folders)
